# docs/swagger.yaml
@@ -1,11 +1,110 @@
 basePath: /
-host: 192.168.50.221:8080
+definitions:
+  dto.LoginRequest:
+    properties:
+      email:
+        example: example123@gmail.com
+        type: string
+      password:
+        example: example123
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dto.RegisterRequest:
+    properties:
+      email:
+        example: example123@gmail.com
+        type: string
+      password:
+        example: example123
+        minLength: 8
+        type: string
+    required:
+    - email
+    - password
+    type: object
+  dto.Response:
+    properties:
+      data:
+        items: {}
+        type: array
+      error:
+        type: string
+      msg:
+        type: string
+      success:
+        type: boolean
+    type: object
+host: localhost:8080
 info:
   contact: {}
-  description: Solid Coffee Backend RESTful API
-  title: Solid Coffee Backend
+  description: Social media Backend RESTful API
+  title: social media Backend
   version: "1.0"
-paths: {}
+paths:
+  /auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user account
+      parameters:
+      - description: Login request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Login user
+      tags:
+      - Auth
+  /auth/register:
+    post:
+      consumes:
+      - application/json
+      description: Create new user account
+      parameters:
+      - description: Register request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/dto.RegisterRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.Response'
+      summary: Register new user
+      tags:
+      - Auth
 securityDefinitions:
   BearerAuth:
     description: Type "Bearer" followed by a space and JWT token.
